# DiskLens

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: DEVELOPMENT_STEPS.md  UI_FRAMEWORK.md
scripts/: package-release.cmd  package-release.ps1
src/: main.cpp
src/app/: App.cpp  App.h  App.rc  DiskLensNative.manifest  resource.h
src/core/: AgeStats.cpp  AgeStats.h  CategoryStats.cpp  CategoryStats.h  DirectoryScanner.cpp  DirectoryScanner.h  DiskHealth.cpp  DiskHealth.h  FileHasher.cpp  FileHasher.h  Format.cpp  Format.h  LongPath.cpp  LongPath.h  NtfsMftScanner.cpp  NtfsMftScanner.h  ScanDiff.cpp  ScanDiff.h  ScanModels.h
src/qt/: AppIcons.cpp  AppIcons.h  CategoryDonutWidget.cpp  CategoryDonutWidget.h  DiskLens.manifest  FeatureHubWidget.cpp  FeatureHubWidget.h  FileAgeHistogramWidget.cpp  FileAgeHistogramWidget.h  HeadlessCli.cpp  HeadlessCli.h  MainWindow.cpp  MainWindow.h  QtApp.rc  QtApp.rc.in  ResultTableModel.cpp  ResultTableModel.h  TableExport.cpp  TableExport.h  TreemapWidget.cpp  TreemapWidget.h  Version.h.in  main.cpp  resources.qrc
tools/: onefile_launcher.cpp  onefile_resources.rc  payload_compressor.cpp
